portfolio/src/css/App.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

a {
  text-decoration: none;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

.App {
  text-align: center;
  position: relative;
  width: 100%;
  height: 60vh;
}

.portfolio-container {
  max-width: 1024px;
  margin: 0 auto;
}

.headShot {
  left: 0px;
  top: 0px;
  z-index: -10;
  width: 100vw;
  height: 100vh;
}

.testing {
  display: block;
}

.navMenu {
  /* border: 1px solid orange; */
  /* display: flex; */
  position: fixed;
  z-index: 20;
  
 
}

.nav-subContainer {
  display: flex;
  width: 150px;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

.navLinks {
  text-decoration: none;
  color: #a3a3a3;
  padding: 5px;
  font-size: 2.5rem;
  /* line-height: 50px; */
  margin: 15px 0;
}


.parallax-headshot {
  min-height: 500px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.profile-name {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  /* background-color: white; */
  opacity: 1;
  width: 420px;
  height: 250px;
  border-radius: 15px;
}

.profile-name h1 {
  color: white;
  font-weight: bold;
  font-size: 5.5rem;
  font-family: 'Informal Roman', 'Garamond', sans-serif;
  opacity: 1;
}
.profile-name h2 {
  color: white;
  font-size: 8rem;
  font-weight: bold;
  font-family: 'Sitka Heading', 'Century Schoolbook',sans-serif;
}

.experience-tabs {
  /* border: 1px solid yellow; */
  margin: 0 auto;
  max-width: 1024px;
}

.experience-tabs h1 {
  font-size: 3.6rem;
  margin: 50px auto;
  font-family: 'Lato Light', sans-serif;
  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
  width: 200px;
  padding: 6px;
}

.exp-description {
  font-size: 1.8rem;
  line-height: 1.5;
  text-align: left;
}

.role {
  display: flex;
  /* justify-content: space-between; */
  margin: 60px 0;
  font-family: 'Lato Light', sans-serif;
}

.company-img {
  width: 250px;
  height: 250px;
  border-radius: 20px;
  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
}


.company-info-desc {
  text-align: left;
  margin: 0 30px;
  display: flex;
  flex-direction: column;
  padding: 0 10px;
}

.role-title {
  font-size: 2.5rem;
  color: #0d5fe2;
}

.location {
  font-size: 2rem;
  margin: 10px 0;
  font-style: italic;
}

.description {
  font-size: 1.8rem;
  line-height: 1.5;
  text-align: left;
  padding: 10px;
  width: 300px;
  font-style: italic;
  font-family: 'Lato Light', sans-serif;
}

.project-tabs h1 {
  /* border: 1px solid green; */
  font-size: 3.6rem;
  margin: 50px auto;
  font-family: 'Lato Light', sans-serif;
  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
  width: 200px;
  padding: 6px;
}

.project-snippets {
  display: flex;
  justify-content: space-evenly;
  margin: 20px 0 40px 0;
}

.project-snippet {
  width: 300px;
  height: 300px;
  border-radius: 20px;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
}

.footer {
  /* border: 1px solid red; */
  margin: 20px 0 0 0;
  background-color: #1a202b;
  padding: 20px 0;
  display: flex;
  justify-content: center;
}

.footer-quote h1 {
  font-family: 'Lato Light', sans-serif;
  font-size: 1.5rem;
  font-weight: lighter;
  margin: 20px 0;
  color: white;
  text-align: right;
}

.contact-info {
  align-items: center;
  display: flex;
}

.social-media {
  width: 100px;
  height: 100px;
  border-radius: 20px;
  align-items: center;
  margin: 0 25px;
}

@media (max-width: 1100px) {
  .portfolio-container {
    padding: 0 20px;
  }

  .project-snippets {
    display: flex;
    flex-wrap: wrap;
    margin: 20px 0 40px 0;
    /* justify-content: flex-start; */
  }

  .project-snippet {
    margin: 10px 0;
  }
}

@media (max-width: 768px) {

  .header-height {
    height: 100vh;
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .project-snippets {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px 0 40px 0;
  }

  .project-snippet {
    margin: 10px 0;
    width: 350px;
    height: 350px;
  }

  .role {
    display: flex;
    flex-direction: column;
    margin: 20px 0;
  }

  .company-info-desc {
    margin: 0 auto;
    width: 345px;
    /* text-align: justify; */
  }

  .company-img {
    width: 350px;
    height: 350px;
    border-radius: 20px;
    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2),
      0 1px 0.5px 0 rgba(0, 0, 0, 0.19);
    margin: 0 0 10px 0;
  }

  .company-info {
    width: 400px;
    margin: 0 auto;
  }

  .footer {
    /* border: 1px solid red; */
    flex-direction: column;
  }

  .footer-quote h1 {
    text-align: center;
  }

  .contact-info {
    display: flex;
    justify-content: center;
  }
}

